// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Help component should be displayed as a successful message 1`] = `
<p
  className="help is-success"
>
  <p>
    Default
  </p>
</p>
`;

exports[`Help component should concat classname in props with Bulma classname 1`] = `
<p
  className="help other-class this-is-a-test"
>
  <p>
    Default
  </p>
</p>
`;

exports[`Help component should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "as": "p",
  },
  "render": [Function],
}
`;

exports[`Help component should have help classname 1`] = `
<p
  className="help"
>
  <p
    className="bd-notification is-success"
  >
    <p>
      Default
    </p>
    <p>
      Container
    </p>
  </p>
</p>
`;

exports[`Help component should use inline styles 1`] = `
<p
  className="help"
  style={
    Object {
      "height": 250,
    }
  }
>
  <p>
    Default
  </p>
</p>
`;
